data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3792.wast
;; 1. **Test: Check Handling of Br_Table with No Indices**    - **Description**: Utilize a `br_table` instruction with an empty set of indices, followed by a `call` to a function with no parameters.    - **Constraint**: Ensure that the stack correctly handles the empty index case, and validate that the `call` does not erroneously pop or push unexpected values.    - **Edge Case**: Tests the engine's behavior when `br_table` provides no target indices and the subsequent `call` should execute a function with no parameters.

(assert_invalid
  (module
    (func $f)
    (type $sig (func))
    (table funcref (elem $f))
    (func $test-empty-br-table-call
      (block
        (br_table 0)
        (call $f)
      )
    )
  )
  "type mismatch"
)